[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
opentelemetry = "0.23.0"
opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
thiserror = "1.0.61"
tracing = "0.1.26"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3"

[dev-dependencies]
serde ={ version = "1", features = ["derive"] }
serde_json = "1.0.117"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
derive_builder = "0.20.0"
chrono = "0.4.38"
